Update index.html (Introduction)
Adds an introduction to the website and a link to the second page.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-body {
-  background-color: lightblue;
-}
-</style>
-</head>
-<body>
+  <head>
+    <style>
+      body {
+        background-color: rgb(211, 225, 235);
+      }
 
-<h1>Hello World!</h1>
-
-<p>This page has a light blue background color!</p>
-
-</body>
+      h1 {
+        font-weight: bold;
+        color: rgba(255, 244, 79, 0.8);
+        font-family: Trebuchet MS;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Hey! I'm David Dong.</h1>
+    <p style="text-align: center;">I'm a Rutgers University student majoring in Computer Science and Physics and this is my website! <br>
+    It is still <strong>very</strong> under production so excuse its appearance as I try to teach myself html, css, and javascript. For now, I am working on just figuring out a good template to display the website while creating a second page so I can chronicle my past projects in more depth. <br>
+    The aforementioned second page (also under production): <a href="projects.html">Projects!</a>
+    </p>
+  </body>
 </html>
