Update projects.html to implement main.css

--- a/projects.html
+++ b/projects.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      body {
-        background-color: rgb(211, 225, 235);
-      }
-      h1 {
-        font-weight: bold;
-        color: rgba(255, 244, 79, 0.8);
-        font-family: Trebuchet MS;
-        text-align: center;
-        margin: 0px;
-        padding: 0px;
-      }
-      p {
-        margin: 0px;
-        padding: 0px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
     <h1>Developer's Page</h1>
     <p style="text-align: center;">Unfortunately, while there are quite are few projects I would love to show off, a few of them were lost over the years since I didn't know VCS were even a thing back then. Some of these projects include a currency exchanger, a discord bot, a pet care simulator, and etc. No point in crying over spilled milk though and let's get into the projects I can show off! </p>
+    <div id="Projects">
+      <h2>Project 1</h2>
+      <p1> blah blah blah </p1>
+    </div>
   </body>
 </html>
