Update projects to include new title box

--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,14 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>Developer's Page</h1>
-    <p style="text-align: center;"> Unfortunately, while there are quite are few projects I would love to show off, a few of them were lost over the years since I didn't know VCS were even a thing back then. Some of these projects include a currency exchanger, a discord bot, a pet care simulator, and etc. No point in crying over spilled milk though and let's get into the projects I can show off! </p>
+    <div id="Title">
+      <h1>Developer's Page</h1>
+      <p style="text-align: center;"> Welcome to David Dong's developer's page! Here, I will account all my previous personal projects. I will go over the software/languages/libraries/etc that I used on these projects and give a short description of what they do. I will also go a little bit in depth about what I learned, what I struggled with, what I liked about the project, and what I would do if I were to come back to the project. I hope you enjoy! </p>
+    </div>
     <div id="Projects">
       <h2>Pokemon Decoy (High School)</h2>
-      <img src = "pokemondecoy.PNG" alt = "Pokemon decoy with a shield effect triggering on the player." width = "100%" height = "100%">
-      <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href = "https://narrowsilkycgi--daviddong1.repl.co/"> here </a>.</p1>
+      <img src="pokemondecoy.PNG" alt="Pokemon decoy with a shield effect triggering on the player." width="100%" height="100%">
+      <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p1>
     </div>
   </body>
 </html>
