Added navbar and changed look

--- a/index.html
+++ b/index.html
@@ -1,24 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <style>
-      body {
-        background-color: rgb(211, 225, 235);
-      }
-
-      h1 {
-        font-weight: bold;
-        color: rgba(255, 244, 79, 0.8);
-        font-family: Trebuchet MS;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>Hey! I'm David Dong.</h1>
-    <p style="text-align: center;">I'm a Rutgers University student majoring in Computer Science and Physics and this is my website! <br>
-    It is still <strong>very</strong> under production so excuse its appearance as I try to teach myself html, css, and javascript. For now, I am working on just figuring out a good template to display the website while creating a second page so I can chronicle my past projects in more depth. <br>
-    The aforementioned second page (also under production): <a href="projects.html">Projects!</a>
-    </p>
+    <nav id="navlist">
+		<div class="navbar">
+		  <ul class="navbar">
+			  <a class="nav-link nav-link-fade-up" href="#Introduction">INTRODUCTION</a>
+			  <a class="nav-link nav-link-fade-up" href="#Projects">PROJECTS</a>
+			  <a class="nav-link nav-link-fade-up" href="#">HOBBIES</a>
+			  <a class="nav-link nav-link-fade-up" href="#">FICTION</a>
+		  </ul>
+		</div>
+	</nav>
+    <div class="Title">
+    <section id="Introduction">
+      <h1>Heya, I'm David Dong!</h1>
+      <br>
+      <p>And you're on my website! If you didn't know, I am currently a student at Rutgers University majoring in Computer Science and Physics. I chose these majors because I love learning new things and what better things to learn then computer science which is everywhere and physics which is everything!</p>
+      <br>
+      <p>This website was primarily made to chornicle my past projects and show them off. I will give a basic summary of each one and go into detail about the process and what I learned. Furthermore, since this website was also made so I could teach myself html, css, and javascript - I will also overextend and go into my hobbies and the books I have read and am currently reading. That's all and I hope you enjoy!</p>
+      <br>
+      <p>Some resources so you can link up with me:</p>
+      </section>
+    </div>
+    <div class="Body">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section id="Projects">
+    <h1>Projects</h1>
+    <p1>Here, I will account all my previous projects. I will go over the software/languages/libraries/etc that I used and give a summary of the final product. I will also go a little bit in depth about what I learned, what I struggled with, what I liked about the project, and what I would do if I were to come back to it.</p1>
+    <div id="ProjectBox">
+      <h2>Pokemon Decoy (High School)</h2>
+      <img src="pokemondecoy.PNG" alt="Pokemon decoy with a shield effect triggering on the player." width="100%" height="100%">
+      <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p2>
+    </div>
+    </section>
+    </div>
+    <script>
+        // Makes navigation bar sticky
+        window.onscroll = function() {myFunction()};
+        var navlist = document.getElementById("navlist");
+        var sticky = navlist.offsetTop;
+        function myFunction() {
+            if (window.pageYOffset >= sticky) {
+                navlist.classList.add("sticky")
+            }
+            else {
+                navlist.classList.remove("sticky");
+            }
+        }
+    </script>
+
   </body>
 </html>
