--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <a class="nav-link nav-link-fade-up" href="#Introduction">INTRODUCTION</a>
           <a class="nav-link nav-link-fade-up" href="#Projects">PROJECTS</a>
           <a class="nav-link nav-link-fade-up" href="#Hobbies">HOBBIES</a>
-          <a class="nav-link nav-link-fade-up" href="#Fiction">FICTION</a>
+          <a class="nav-link nav-link-fade-up" href="#Media">MEDIA</a>
         </ul>
       </div>
     </nav>
@@ -27,13 +27,13 @@
         <br>
         <div class="column">
           <a class="socialbuttons" href="mailto: DavidDong5252@gmail.com" target="_blank">
-            <img src="images/emailicoon.PNG" alt="Email." class="iconimg">
+            <img src="images/emailicoon.png" alt="Email." class="iconimg">
           </a>
           <a class="socialbuttons" href="https://github.com/DavidD-Fleming/" target="_blank">
-            <img src="images/githubicon.PNG" alt="Github." class="iconimg">
+            <img src="images/githubicon.png" alt="Github." class="iconimg">
           </a>
           <a class="socialbuttons" href="https://www.linkedin.com/in/david-dong-b14920211/" target="_blank">
-            <img src="images/linkedinicon.PNG" alt="Linkedin." class="iconimg">
+            <img src="images/linkedinicon.png" alt="Linkedin." class="iconimg">
           </a>
         </div>
       </section>
@@ -54,19 +54,19 @@
           <div class="mySlides fade">
             <div id="ProjectBox">
               <h2>Pokemon Decoy (High School)</h2>
-              <img src="images/pokemondecoy.PNG" alt="Pokemon decoy with a shield effect triggering on the player." class="projectimg" width="80%" height="80%">
+              <img src="images/pokemondecoy.PNG" alt="Pokemon decoy with a shield effect triggering on the player." class="soloprojectimg" width="80%" height="80%">
               <br>
               <p2>&emsp;&emsp;Pokemon decoy was a project I worked on in high school with Benjamin Lifshey. The game used Replit as the platform of the website and Javascript (with HTML and CSS as the basis) as the primary language. As the name suggests, the game was made to mimic Pokemon with two players going against each other with the goal of setting the enemy's health bar to 0. Player 1 (Triangle) has the four abilities seen above while the Attempted Pentagon has two abilities being an ice beam and a heal of its own.</p2>
               <p2>&emsp;&emsp;This was the first project I programmed that I was really happy about. It was the first time I programmed in Javascript and I learned a significant amount about the basis of coding. While I do not remember struggling with anything in particular, looking back at the program and the actual game - the whole thing was terribly inefficient. Looking past the fact that there is no indication about how to use each player's abilities and the website was not built with different screen sizes in mind, the organization and execution of the code left many areas prone to bugs and could have been faster if any methods were used.</p2>
               <p2>&emsp;&emsp;Looking past the inefficiencies, my favorite part of the project was the sheer attention to detail. Buttons light up when pressed and each player's health bar would shake when they take damage. Also when players landed a critical strike it would be displayed in Japanese. Also the game could be played in Japanese. If I were to come back to the project, I would definitely build it in another language that fit game development better like C#.</p2>
               <br>
-              <p2>I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>.</p2>
+              <p2>I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/" target="_blank"> here </a>.</p2>
             </div>
           </div>
           <div class="mySlides fade">
             <div id="ProjectBox">
               <h2>Jammin' Jelly (Scarlet Game Jam)</h2>
-              <img src="images/jamminjelly.PNG" alt="Level 2 of Jammin' Jelly." class="projectimg" width="80%" height="80%">
+              <img src="images/jamminjelly.PNG" alt="Level 2 of Jammin' Jelly." class="soloprojectimg" width="80%" height="80%">
               <br>
               <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p2>
             </div>
@@ -75,8 +75,8 @@
             <div id="ProjectBox">
               <h2>Cooking Quiz App</h2>
               <div class="column">
-              <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="projectimg" width="20%" height="20%">
-              <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="projectimg" width="20%" height="20%">
+              <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="groupprojectimg" width="20%" height="20%">
+              <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="groupprojectimg" width="20%" height="20%">
               </div>
               <br>
               <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p2>
@@ -127,9 +127,31 @@
           <span class="dot" onclick="currentSlide(6)"></span>
         </div>
       </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
       <section id = "Hobbies">
+        <h1>Hobbies</h1>
+        <p1>Here, I'll go over a few of my hobbies!</p1>
       </section>
-      <section id = "Fiction">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+      <section id = "Media">
+        <h1>Media</h1>
+        <p1>Here, I'll go over the books I am currently reading and some of my favorites that I have read!</p1>
+        <p1> I am currently reading: </p1>
+        <img src="images/thewitchercover.PNG" alt="Cover of The Witcher." class="witcherimg" onmouseover="witcherHover(this);" onmouseout="witcherUnhover(this);">
       </section>
     </div>
   </body>
