Added Hobbies boxes and visual adjustments

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
               <h2>Pokemon Decoy (High School)</h2>
               <img src="images/pokemondecoy.PNG" alt="Pokemon decoy with a shield effect triggering on the player." class="soloprojectimg" width="80%" height="80%">
               <br>
-              <p2>&emsp;&emsp;Pokemon decoy was a project I worked on in high school with Benjamin Lifshey. The game used Replit as the platform of the website and Javascript (with HTML and CSS as the basis) as the primary language. As the name suggests, the game was made to mimic Pokemon with two players going against each other with the goal of setting the enemy's health bar to 0. Player 1 (Triangle) has the four abilities seen above while the Attempted Pentagon has two abilities being an ice beam and a heal of its own.</p2>
+              <p2>&emsp;&emsp;Pokemon decoy was a project I worked on in high school with Benjamin Lifshey. The game used Replit as the platform of the website and <b>Javascript</b> (with <b>HTML</b> and <b>CSS</b> as the basis) as the primary language. As the name suggests, the game was made to mimic Pokemon with two players going against each other with the goal of setting the enemy's health bar to 0. Player 1 (Triangle) has the four abilities seen above while the Attempted Pentagon has two abilities being an ice beam and a heal of its own.</p2>
               <p2>&emsp;&emsp;This was the first project I programmed that I was really happy about. It was the first time I programmed in Javascript and I learned a significant amount about the basis of coding. While I do not remember struggling with anything in particular, looking back at the program and the actual game - the whole thing was terribly inefficient. Looking past the fact that there is no indication about how to use each player's abilities and the website was not built with different screen sizes in mind, the organization and execution of the code left many areas prone to bugs and could have been faster if any methods were used.</p2>
               <p2>&emsp;&emsp;Looking past the inefficiencies, my favorite part of the project was the sheer attention to detail. Buttons light up when pressed and each player's health bar would shake when they take damage. Also when players landed a critical strike it would be displayed in Japanese. Also the game could be played in Japanese. If I were to come back to the project, I would definitely build it in another language that fit game development better like C#.</p2>
               <br>
-              <p2>I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/" target="_blank"> here </a>.</p2>
+              <p2>I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/" target="_blank"> here</a>. Use QWER (in that order) for Triangle’s abilities and AS for Attempted Pentagon’s abilities.</p2>
             </div>
           </div>
           <div class="mySlides fade">
@@ -68,18 +68,24 @@
               <h2>Jammin' Jelly (Scarlet Game Jam)</h2>
               <img src="images/jamminjelly.PNG" alt="Level 2 of Jammin' Jelly." class="soloprojectimg" width="80%" height="80%">
               <br>
-              <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p2>
+              <p2>&emsp;&emsp;Jammin’ Jelly was a game I made in a week for the 2021 Scarlet Knights Game Jam. The game was made in <b>Unity</b> using <b>C#</b> and I worked together with a game designer and animator. The theme of the Game Jam was “jam” so we thought it would be fun to create a game where we have two players and one player could jam out with a guitar and send sound waves while the other player could throw jam to create terrain that can bounce players, enemies, and sound waves. Both players have to use their abilities and work together to pass enemies and progress until they reach the end.</p2>
+              <p2>&emsp;&emsp;This project taught me a lot about C# and Unity but it primarily helped me learn what it was like to work with a team as a programmer. There were definitely communication issues that delayed progress and made it much harder to code. We also found our animator really late into the Game Jam so we were not able to implement the visuals of the game in time. This meant that while the game was actually really fun and had really interesting puzzle solving opportunities - it looked boring. The primary thing I learned from this project was to always, always communicate and that nitty gritty details are vital when it comes to software that has delicate interactions with each other and the player.</p2>
+              <p2>&emsp;&emsp;Despite the issues of the project, I am really happy about the mechanics of the game. The players had solid movement and all the abilities (sound waves, jam terrain) worked perfectly together. I was also really happy with the enemies as they were all dynamically made so moving enemies, enemies that shot projectiles just needed a small numbers adjustment if I wanted to duplicate them and move them around. If we had more time in the Game Jam or if I were to come back to this game, I would implement visuals and add more levels to the game.</p2>
+              <br>
+              <p2>The Github repository of the game is <a href="https://github.com/DavidD-Fleming/ScarletKnightsGameJam2021" target="_blank"> here</a>.</p2>
             </div>
           </div>
           <div class="mySlides fade">
             <div id="ProjectBox">
-              <h2>Cooking Quiz App</h2>
+              <h2>Cooking Quiz</h2>
               <div class="column">
               <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="groupprojectimg" width="20%" height="20%">
               <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="groupprojectimg" width="20%" height="20%">
               </div>
               <br>
-              <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p2>
+              <p2>&emsp;&emsp;For my Blueprint club, I worked with another programmer to create a cooking quiz app. The project was made in <b>Java</b> using <b>Android Studio</b> and was essentially a small app that you would answer cooking questions with. It was the first time I worked collaboratively with another programmer and the first time I used Android Studio. Nevertheless, while there were a few complications and errors here and there, it was overall a very solid experience where everything went pretty smoothly. We had a few issues with Github since it was both our first times sharing a repository, but we were able to solve them relatively quickly. My favorite part of the project was figuring out how to use Android Studio and seeing the app work on an emulator felt really rewarding. If I were to come back to this project, I would add a significant amount of new questions and maybe even look to expand and add features such as comparing results with friends, adding more quiz topics, and etc.</p2>
+              <br>
+              <p2>The Github repository of the app is <a href="https://github.com/DavidD-Fleming/bp-fall-2021-quizapp" target="_blank"> here</a>.</p2>
             </div>
           </div>
           <div class="mySlides fade">
@@ -138,6 +144,21 @@
       <section id = "Hobbies">
         <h1>Hobbies</h1>
         <p1>Here, I'll go over a few of my hobbies!</p1>
+        <div class="column">
+        <div class="row">
+        <div id="Hobby">
+            <h2> ahhhh </h2>
+            <p2> sdfasdfsdfsdafasdfsdf. sadfsdfsadf. </p2>
+        </div>
+        <div id="Hobby">
+            <h2> ahhhh </h1>
+            <p2> sdfasdfsdfsdafasdfsdf. sadfsdfsadf. </p2>
+        </div>
+        <div id="Hobby">
+            <h2> ahhhh </h1>
+            <p2> sdfasdfsdfsdafasdfsdf. sadfsdfsadf. </p2>
+        </div>
+        </div>
       </section>
     <br>
     <br>
