Changed hobbies to clubs and finished section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul class="navbar">
           <a class="nav-link nav-link-fade-up" href="#Introduction">INTRODUCTION</a>
           <a class="nav-link nav-link-fade-up" href="#Projects">PROJECTS</a>
-          <a class="nav-link nav-link-fade-up" href="#Hobbies">HOBBIES</a>
+          <a class="nav-link nav-link-fade-up" href="#Clubs">CLUBS</a>
           <a class="nav-link nav-link-fade-up" href="#Media">MEDIA</a>
         </ul>
       </div>
@@ -49,7 +49,7 @@
     <div class="Body">
       <section id="Projects">
         <h1>Projects</h1>
-        <p1>Here, I will account all my previous projects. I will go over the software/languages/libraries/etc that I used and give a summary of the final product. I will also go a little bit in depth about what I learned, what I struggled with, what I liked about the project, and what I would do if I were to come back to it.</p1>
+        <p1>Here, I will account all my previous projects. I will go over the software/languages/libraries/etc that I used and give a summary of the final product. I will also go in depth about what I learned, what I struggled with, what I liked about the project, and what I would do if I were to come back to it.</p1>
         <div class="slideshow-container">
           <div class="mySlides fade">
             <div id="ProjectBox">
@@ -61,31 +61,6 @@
               <p2>&emsp;&emsp;Looking past the inefficiencies, my favorite part of the project was the sheer attention to detail. Buttons light up when pressed and each player's health bar would shake when they take damage. Also when players landed a critical strike it would be displayed in Japanese. Also the game could be played in Japanese. If I were to come back to the project, I would definitely build it in another language that fit game development better like C#.</p2>
               <br>
               <p2>I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/" target="_blank"> here</a>. Use QWER (in that order) for Triangle’s abilities and AS for Attempted Pentagon’s abilities.</p2>
-            </div>
-          </div>
-          <div class="mySlides fade">
-            <div id="ProjectBox">
-              <h2>Jammin' Jelly (Scarlet Game Jam)</h2>
-              <img src="images/jamminjelly.PNG" alt="Level 2 of Jammin' Jelly." class="soloprojectimg" width="80%" height="80%">
-              <br>
-              <p2>&emsp;&emsp;Jammin’ Jelly was a game I made in a week for the 2021 Scarlet Knights Game Jam. The game was made in <b>Unity</b> using <b>C#</b> and I worked together with a game designer and animator. The theme of the Game Jam was “jam” so we thought it would be fun to create a game where we have two players and one player could jam out with a guitar and send sound waves while the other player could throw jam to create terrain that can bounce players, enemies, and sound waves. Both players have to use their abilities and work together to pass enemies and progress until they reach the end.</p2>
-              <p2>&emsp;&emsp;This project taught me a lot about C# and Unity but it primarily helped me learn what it was like to work with a team as a programmer. There were definitely communication issues that delayed progress and made it much harder to code. We also found our animator really late into the Game Jam so we were not able to implement the visuals of the game in time. This meant that while the game was actually really fun and had really interesting puzzle solving opportunities - it looked boring. The primary thing I learned from this project was to always, always communicate and that nitty gritty details are vital when it comes to software that has delicate interactions with each other and the player.</p2>
-              <p2>&emsp;&emsp;Despite the issues of the project, I am really happy about the mechanics of the game. The players had solid movement and all the abilities (sound waves, jam terrain) worked perfectly together. I was also really happy with the enemies as they were all dynamically made so moving enemies, enemies that shot projectiles just needed a small numbers adjustment if I wanted to duplicate them and move them around. If we had more time in the Game Jam or if I were to come back to this game, I would implement visuals and add more levels to the game.</p2>
-              <br>
-              <p2>The Github repository of the game is <a href="https://github.com/DavidD-Fleming/ScarletKnightsGameJam2021" target="_blank"> here</a>.</p2>
-            </div>
-          </div>
-          <div class="mySlides fade">
-            <div id="ProjectBox">
-              <h2>Cooking Quiz</h2>
-              <div class="column">
-              <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="groupprojectimg" width="20%" height="20%">
-              <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="groupprojectimg" width="20%" height="20%">
-              </div>
-              <br>
-              <p2>&emsp;&emsp;For my Blueprint club, I worked with another programmer to create a cooking quiz app. The project was made in <b>Java</b> using <b>Android Studio</b> and was essentially a small app that you would answer cooking questions with. It was the first time I worked collaboratively with another programmer and the first time I used Android Studio. Nevertheless, while there were a few complications and errors here and there, it was overall a very solid experience where everything went pretty smoothly. We had a few issues with Github since it was both our first times sharing a repository, but we were able to solve them relatively quickly. My favorite part of the project was figuring out how to use Android Studio and seeing the app work on an emulator felt really rewarding. If I were to come back to this project, I would add a significant amount of new questions and maybe even look to expand and add features such as comparing results with friends, adding more quiz topics, and etc.</p2>
-              <br>
-              <p2>The Github repository of the app is <a href="https://github.com/DavidD-Fleming/bp-fall-2021-quizapp" target="_blank"> here</a>.</p2>
             </div>
           </div>
           <div class="mySlides fade">
@@ -129,8 +104,6 @@
           <span class="dot" onclick="currentSlide(2)"></span>
           <span class="dot" onclick="currentSlide(3)"></span>
           <span class="dot" onclick="currentSlide(4)"></span>
-          <span class="dot" onclick="currentSlide(5)"></span>
-          <span class="dot" onclick="currentSlide(6)"></span>
         </div>
       </section>
     <br>
@@ -141,22 +114,21 @@
     <br>
     <br>
     <br>
-      <section id = "Hobbies">
-        <h1>Hobbies</h1>
-        <p1>Here, I'll go over a few of my hobbies!</p1>
-        <div class="column">
-        <div class="row">
-        <div id="Hobby">
-            <h2> ahhhh </h2>
-            <p2> sdfasdfsdfsdafasdfsdf. sadfsdfsadf. </p2>
+      <section id = "Clubs">
+        <h1>Clubs</h1>
+        <p1>Here, I'll go over the relevant clubs I attend at Rutgers University! I will give a short description of the club then go over a project I worked on in each club.</p1>
+        <div class="boxcolumn">
+        <div id="ClubCOGS">
+            <h3> COGS </h3>
+            <p3> COGS, or the Creation of Games Society, is a club focused on creating a community where artists, musicians, game designers, and programmers can come together to create video games. Members usually work on one big project throughout the semester while sometimes there are events such as Game Jams or Firesides where people can be challenged to create games with certain themes or rules. </p3>
+            <p3> For example, for the 2021 Scarlet Knights Game Jam, we had one week to create a game surrounding the theme of “jam” and had to create the project using Unity and C#. To follow the theme, my team decided that it would be fun to create a platformer where we have two players and one player could jam out with a guitar and send sound waves while the other player could throw jam to create terrain that could bounce players, enemies, and sound waves. This event was very challenging but also a ton of fun and I learned a significant amount about working with different people with different skillsets. </p3>
+            <p3>If you want to learn more about Jammin' Jelly, the Github repository of the game is <a href="https://github.com/DavidD-Fleming/ScarletKnightsGameJam2021" target="_blank" style="color: #000000"> here</a>!</p3>
         </div>
-        <div id="Hobby">
-            <h2> ahhhh </h1>
-            <p2> sdfasdfsdfsdafasdfsdf. sadfsdfsadf. </p2>
-        </div>
-        <div id="Hobby">
-            <h2> ahhhh </h1>
-            <p2> sdfasdfsdfsdafasdfsdf. sadfsdfsadf. </p2>
+        <div id="ClubBlueprint">
+            <h3> Blueprint </h3>
+            <p3> Blueprint seeks to promote innovation and creativity by bringing together groups of product managers, designers, and engineers to build products. Groups are student led and focus on creating one application throughout a semester/school year. </p3>
+            <p3> For example, a project I worked on with another engineer was a cooking quiz app. The quiz was made in Java using Android Studio and was essentially a small app that you would answer cooking questions with. It featured questions like “What is the world’s most expensive spice?” (as of 2021 - saffron) and would keep track how many times the user answered correctly. This app was actually the first time I worked simultaneously with another programmer using Github and I learned how to code efficiently with a partner.</p3>
+            <p3>If you want to learn more about the cooking quiz, the Github repository of the app is <a href="https://github.com/DavidD-Fleming/bp-fall-2021-quizapp" target="_blank" style="color: #000000"> here</a>!</p3>
         </div>
         </div>
       </section>
